<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:orientation="vertical"
            android:padding="@dimen/spacing_xlarge">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_xlarge"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:text="h@gmail.com"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hello"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/tv_hello"
                    android:layout_marginEnd="20dp"
                    android:textSize="30dp"


                    />
            </RelativeLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_xlarge"
                    android:hint="@string/password"
                    android:text="h"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xlarge"
                android:text="@string/remember_me"
                android:textSize="@dimen/size_2xlarge" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xlarge"
                android:background="@drawable/shape_login"
                android:text="@string/login"
                android:textColor="@color/white_color" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xlarge"
                android:background="@drawable/shape_login"
                android:text="@string/signUp"
                android:textColor="@color/white_color" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/ic_splash_bg"
            android:contentDescription="@string/building"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_view_height"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark">

        </View>


    </LinearLayout>
</ScrollView>
