<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_3xlarge"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_xlarge"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/et_fName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_xlarge"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:hint="@string/first_name"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:targetApi="o"
                    android:imeOptions="actionNext"
                    />

                <EditText
                    android:id="@+id/et_lName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_xlarge"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress"
                    tools:targetApi="o"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_xlarge"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:targetApi="o" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_xlarge"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        tools:targetApi="o" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_xlarge"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:importantForAutofill="no"
                        tools:targetApi="o" />
                </android.support.design.widget.TextInputLayout>

                <EditText
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_xlarge"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:importantForAutofill="no"
                    tools:targetApi="o" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:background="@drawable/ic_splash_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xlarge"
                android:text="@string/terms_conditions"
                android:textSize="@dimen/size_2xlarge" />

            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login"
                android:text="@string/button_create_account"
                android:textColor="@color/white_color" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

