<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <!--including the toolbar-->
    <include layout="@layout/custom_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@+id/customToolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/spacing_3xlarge"
                android:layout_weight="6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_xlarge"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/et_fName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:hint="@string/first_name"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no"
                        tools:targetApi="o"
                        android:enabled="false"/>

                    <EditText
                        android:id="@+id/et_lName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:hint="@string/last_name"
                        android:inputType="textEmailAddress"
                        android:enabled="false"
                        android:importantForAutofill="no"
                        tools:targetApi="o" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_xlarge"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no"
                        android:enabled="false"
                        tools:targetApi="o" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_xlarge"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:importantForAutofill="no"
                            android:enabled="false"
                            tools:targetApi="o" />
                    </android.support.design.widget.TextInputLayout>


                    <EditText
                        android:id="@+id/et_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_xlarge"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:enabled="false"
                        android:importantForAutofill="no"
                        tools:targetApi="o" />

                    <EditText
                        android:id="@+id/et_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_xlarge"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:enabled="false"
                        android:importantForAutofill="no"
                        tools:targetApi="o" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_marginEnd="@dimen/spacing_xlarge"
                android:background="@drawable/ic_splash_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_xlarge"
                    android:text="@string/terms_conditions"
                    android:textSize="@dimen/size_2xlarge" />

                <Button
                    android:id="@+id/btn_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_login"
                    android:text="@string/update_account"
                    android:textColor="@color/white_color"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="#795548"
        app:itemBackground="@drawable/item_bg"
        android:layout_gravity="bottom"
        app:itemIconTint="@color/grey_60"
        app:itemTextColor="@color/colorPrimary"
        android:focusable="false"
        app:menu="@menu/menu_bottom_navigation"/>
</RelativeLayout>


