<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/card_radius"
    android:elevation="@dimen/card_elevation"
    android:layout_marginTop="@dimen/spacing_xlarge"
    android:layout_marginStart="@dimen/spacing_xlarge"
    android:layout_marginEnd="@dimen/spacing_xlarge"
    android:scrollbars="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_weight="1"
            android:text="@string/contact_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_weight="1"
            android:text="@string/textView"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_weight="1"
            android:text="@string/contact_number"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/contact_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_weight="1"
            android:text="@string/textView"
            />
    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>